--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/carbohydrates.png
+    - assets/banana-bread.png
+    - assets/banana.png
+    - assets/eggs.png
+    - assets/flour.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
