--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
     - assets/oven.png
     - assets/sugar.png
     - assets/vanilla.png
+    - assets/salt.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
